--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Masa.Dcc.Web.Admin.Rcl.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Stack.Components" Version="0.0.497" />
+    <PackageReference Include="Masa.Stack.Components" Version="0.0.488-build*" />
     <!--<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.3" />-->
     <PackageReference Include="Masa.Contrib.StackSdks.Tsc.OpenTelemetry" Version="$(MasaStackSdksPackageVersion)" />
   </ItemGroup>
