--- a/Masa.Dcc.Infrastructure.EFCore.SqlServer/Masa.Dcc.Infrastructure.EFCore.SqlServer.csproj
+++ b/Masa.Dcc.Infrastructure.EFCore.SqlServer/Masa.Dcc.Infrastructure.EFCore.SqlServer.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"  Version="$(DotnetVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="$(DotnetVersion)" />
     <PackageReference Include="Masa.Contrib.Data.EFCore.SqlServer" Version="$(MasaFrameworkPackageVersion)" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools"  Version="$(DotnetVersion)">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="$(DotnetVersion)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -22,6 +22,10 @@
     <None Update="migration-sqlserver.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
