feat: 添加dcc接口参数验证，调整label唯一性验证

--- a/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
+++ b/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>    
+  <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Masa.Utils.Extensions.Validations.FluentValidation" Version="$(MasaFrameworkPackageVersion)" />
     <PackageReference Include="Masa.BuildingBlocks.StackSdks.Dcc.Contracts" Version="$(MasaStackSdksPackageVersion)" />
     <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="$(MasaFrameworkPackageVersion)" />
   </ItemGroup>
